--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -12,7 +12,7 @@
 }
 
 .pagination_item{
-    margin-right: 10px;
+    margin:0 2px;
     background: #390554;
     color: white;
     outline: none;
